// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should disable transitions 1`] = `
<div
  class="css-bkn9fn-textarea denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    name="test6"
    placeholder="Insert something here"
  />
</div>
`;

exports[`TextArea should handle width / height 1`] = `
<div
  class="css-19lzpff-textarea denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    name="test2a"
  />
</div>
`;

exports[`TextArea should render 1`] = `
<div
  class="css-175bdqv-textarea denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    name="test1"
    placeholder="Insert something here"
  />
</div>
`;

exports[`TextArea should render dark theme 1`] = `
<div
  class="css-jlt3j3-textarea denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    name="test5a"
  />
</div>
`;

exports[`TextArea should render disabled dark theme 1`] = `
<div
  class="css-jlt3j3-textarea denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    disabled=""
    name="test5b"
  />
</div>
`;

exports[`TextArea should render error state 1`] = `
<div
  class="css-1iketbw-textarea denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    name="test7"
  >
    This is an error
  </textarea>
</div>
`;
